@@ -842,14 +842,14 @@
 // Sura
 2326,0,0,3:4:5:6:7:8:9:10:11:12,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_DRAGONCOMBO#Dragon Combo#
 2327,0,0,8:9:10:11:12,0,0,0,99,0,0,none,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_SKYNETBLOW#Sky Net Blow#
-2328,0,0,20:25:30:35:40,0,0,0,99,0,0,none,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_EARTHSHAKER#Earth Shaker#
+2328,0,0,36:40:44:48:52,0,0,0,99,0,0,none,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_EARTHSHAKER#Earth Shaker#
 2329,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_FALLENEMPIRE#Fallen Empire#
-2330,0,0,1:2:3:4:5:6:7:8:9:10,0,0,0,99,0,0,exposionspirits,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_TIGERCANNON#Tiger Cannon#
+2330,0,0,6:7:8:9:10:11:12:13:14:15,0,0,0,99,0,0,exposionspirits,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_TIGERCANNON#Tiger Cannon#
 2331,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_HELLGATE#Hell Gate#
 2332,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_RAMPAGEBLASTER#Rampage Blaster#
 2333,0,0,1,0,0,0,99,0,0,none,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_CRESCENTELBOW#Crescent Elbow#
-2334,0,0,1,0,0,0,99,0,0,none,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_CURSEDCIRCLE#Cursed Circle#
-2335,0,0,40,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_LIGHTNINGWALK#Lightning Walk#
+2334,0,0,40:60:80:100:120,0,0,0,99,0,0,none,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_CURSEDCIRCLE#Cursed Circle#
+2335,0,0,80:70:60:50:40,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_LIGHTNINGWALK#Lightning Walk#
 2336,0,0,10:15:20:25:30,0,0,0,99,0,0,none,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_KNUCKLEARROW#Knuckle Arrow#
 2337,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_WINDMILL#Windmill#
 2338,0,0,120,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_RAISINGDRAGON#Raising Dragon#
@@ -857,9 +857,9 @@
 2340,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_ASSIMILATEPOWER#Assimilate Power#
 2341,0,0,1,0,0,0,99,0,0,none,5,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_POWERVELOCITY#Power Velocity#
 2342,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_CRESCENTELBOW_AUTOSPELL#Crescent Elbow Autospell#
-2343,0,0,1,0,20,0,99,0,0,explosionspirits,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GATEOFHELL#Gate of Hell#
+2343,0,0,11:12:13:14:15:16:17:18:19:20,0,20,0,99,0,0,explosionspirits,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GATEOFHELL#Gate of Hell#
 2344,0,0,20:25:30:35:40,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GENTLETOUCH_QUIET#Gentle Touch - Quiet#
-2345,0,0,20:25:30:35:40,0,0,0,99,0,0,none,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GENTLETOUCH_CURE#Gentle Touch - Cure#
+2345,0,0,40:50:60:70:80,0,0,0,99,0,0,none,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GENTLETOUCH_CURE#Gentle Touch - Cure#
 2346,0,0,40:50:60:70:80,1:2:3:4:5,0,0,99,0,0,none,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GENTLETOUCH_ENERGYGAIN#Gentle Touch - Energy Gain#
 2347,0,0,40:50:60:70:80,1:2:3:4:5,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GENTLETOUCH_CHANGE#Gentle Touch - Change#
 2348,0,0,40:50:60:70:80,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_GENTLETOUCH_REVITALIZE#Gentle Touch - Revitalize#
@@ -912,11 +912,21 @@
 2453,0,0,64:68:72:76:80,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_VACUUM_EXTREME#Vacuum Extreme#
 2454,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_VARETYR_SPEAR#Varetyr Spear#
 2455,0,0,30:35:40:45:50,0,0,0,99,0,0,none,0,715,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_ARRULLO#Arrullo#
-2456,0,0,10,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_EL_CONTROL#Ordinance Control#
-2457,0,0,100:150:200,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_AGNI#Summon Agni#
-2458,0,0,100:150:200,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_AQUA#Summon Aqua#
-2459,0,0,100:150:200,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_VENTUS#Summon Ventus#
-2460,0,0,100:150:200,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_TERA#Summon Tera#
+2456,0,0,10,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_EL_CONTROL#Spirit Control#
+2457,0,0,100:150:200,0,0,0,99,0,0,none,0,990:990:994,3:6:1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_AGNI#Summon Fire Spirit Agni#
+2458,0,0,100:150:200,0,0,0,99,0,0,none,0,991:991:995,3:6:1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_AQUA#Summon Water Spirit Aqua#
+2459,0,0,100:150:200,0,0,0,99,0,0,none,0,992:992:996,3:6:1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_VENTUS#Summon Wind Spirit Ventus#
+2460,0,0,100:150:200,0,0,0,99,0,0,none,0,993:993:997,3:6:1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_SUMMON_TERA#Summon Wind Spirit Tera#
+
+// Sorcerer Skills With Unknown ID's
+//2460,0,0,10,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_EL_ACTION#Elemental Action#
+//2460,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_EL_ANALYSIS#Four Spirit Analysis#
+//2460,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_EL_SYMPATHY#Spirit Sympathy# (Will be passive)
+//2460,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_EL_CURE#Spirit Recovery#
+//2460,0,0,1,0,0,0,99,0,0,none,6360,1:2:3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_FIRE_INSIGNIA#Fire Insignia#
+//2460,0,0,1,0,0,0,99,0,0,none,6361,1:2:3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_WATER_INSIGNIA#Water Insignia#
+//2460,0,0,1,0,0,0,99,0,0,none,6362,1:2:3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_WIND_INSIGNIA#Wind Insignia#
+//2460,0,0,1,0,0,0,99,0,0,none,6363,1:2:3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_EARTH_INSIGNIA#Earth Insignia#
 
 2472,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SO_ENDMARK#End Mark#
 
@@ -950,8 +960,8 @@
 // More 3rd Job Skills
 2515,0,0,100:120:140:160:180,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//AB_SECRAMENT#Sacrament#
 2516,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//WM_SEVERE_RAINSTORM_MELEE#Severe Rainstorm Melee#
-2517,0,0,40:50:60:70:80,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_HOWLINGOFLION#Howling of Lion# 
-2518,0,0,40:50:60:70:80,0,0,0,99,0,0,none,1:3:5:7:15,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_RIDEINLIGHTNING#Ride In Lightening#
+2517,0,0,40:45:50:55:60,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_HOWLINGOFLION#Howling of Lion# 
+2518,0,0,22:24:26:28:30,0,0,0,99,0,0,none,1:3:5:7:15,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//SR_RIDEINLIGHTNING#Ride In Lightening#
 
 2533,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//ALL_ODINS_RECALL#Odin's Recall#
 2534,0,0,1,0,0,0,99,0,0,none,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0	//RETURN_TO_ELDICASTES#Return To Eldicastes#
